fixed top bar on mobile

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -210,14 +210,8 @@
   }
 
   @media screen and (max-width: 924px) {
-    #theme-toggle {
-      position: absolute;
-      right: 44px;
-      top: 0;
-      height: 44px;
-      display: flex !important;
-      align-items: center;
-      padding: 0 0.5rem;
+    .visible-links {
+      width: calc(100% - 44px);
     }
   }
 
